# test-makelist

./: .gitignore  cmake-build.bat
cmake demo1/: CMakeLists.txt
cmake demo1/hwapp/: main.cpp
cmake demo1/hwapp1/: CMakeLists.txt  main.cpp
cmake demo1/hwapp1/hwdll/: CMakeLists.txt  helloworld.cpp  helloworld.h
cmake demo1/hwapp2/: CMakeLists.txt  main.cpp
cmake demo1/hwdll/: CMakeLists.txt
consoleappliaction/: CMakeLists.txt  fmtmain.cpp  operatorptrmain.cpp  printmain.cpp  rttrmain.cpp
consoleappliaction/common/: lock.h  timer.h
consoleappliaction/concurrency_parallel/: CMakeLists.txt  create_task.cpp  parallel_for.cpp  parallel_for_each.cpp  parallel_invoke.cpp  shared_mutex_cmp_mutex.cpp  task_group.cpp  when_all_when_any.cpp
consoleappliaction/print/: print.cpp
hwdll/: CMakeLists.txt  helloworld.cpp
vscode demo1/consoleappliaction/: CMakeLists.txt  main.cpp
vscode demo1/myvscode/: CMakeLists.txt  fmtmain.cpp  main.cpp  print.cpp  print.h  printmain.cpp  variantmain.cpp
